--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
         <h1>CPE Dashboard</h1>
         <p> Total: 512 tickets found </p>
-        <p>Last update: Tue Aug 25 2020 02:06</p>
+        <p>Last update: Tue Aug 25 2020 02:31</p>
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#planning">Planning</a></li>
             <li><a data-toggle="tab" href="#open">Open tickets</a></li>
@@ -152,6 +152,24 @@
                     </td>
                     <td>
                         Updated 89 days ago
+                    </td>
+                </tr>
+            
+                <tr>
+                    <td>
+                        <a href="https://pagure.io/fedora-infrastructure/issue/9264"> pagure.io/fedora-infrastructure/9264</a>
+                    </td>
+                    <td>
+                        Add sutula to Legal group
+                    </td>
+                    <td>
+                        Nick Bebout
+                    </td>
+                    <td>
+                        bcotton
+                    </td>
+                    <td>
+                        Updated 0 days ago
                     </td>
                 </tr>
             
@@ -3348,7 +3366,7 @@
                                 Add sutula to Legal group
                             </td>
                             <td>
-                                None
+                                Nick Bebout
                             </td>
                             <td>
                                 bcotton
