--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="fluid-container">
     <div>
         <h1>CPE Dashboard</h1>
-        <p> Total: 498 tickets found </p>
-        <p>Last update: Mon Nov 02 2020 04:32</p>
+        <p> Total: 499 tickets found </p>
+        <p>Last update: Mon Nov 02 2020 05:04</p>
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#planning">Planning</a></li>
             <li><a data-toggle="tab" href="#open">Open tickets</a></li>
@@ -2959,6 +2959,24 @@
                             </td>
                             <td>
                                 Updated 158 days ago
+                            </td>
+                        </tr>
+                    
+                        <tr>
+                            <td>
+                                <a href="https://pagure.io/fedora-infrastructure/issue/9432"> pagure.io/fedora-infrastructure/9432</a>
+                            </td>
+                            <td>
+                                No support for ed25519 (ECC) keys on FAS
+                            </td>
+                            <td>
+                                None
+                            </td>
+                            <td>
+                                keesdejong
+                            </td>
+                            <td>
+                                Updated 0 days ago
                             </td>
                         </tr>
                     
